<resources>
    <string name="app_name">Tujour</string>
    <string name="logo_name">Tujour</string>
    <string name="slogan_name">Keep calm and travel on!</string>

    <!-- String for On Boarding Screen -->
    <!--Titles-->
    <string name="first_slide_title">Search Your Destination</string>
    <string name="second_slide_title">Mark Your Choice</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>

    <!--Descriptions-->
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by following simple steps.</string>
    <string name="fourth_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by following simple steps.</string>


    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>

    <!-- Titles and Descriptions -->
    <string name="search_text">Search...</string>
    <string name="view_all">View All</string>
    <string name="categories">Categories</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="featured_locations_description">All the locations that are featured and have the top demand in town!</string>
    <string name="featured_locations">All Featured Locations</string>
    <string name="weather">Weather</string>


    <string name="restaurants">Restaurants</string>
    <string name="hotels">Hotels</string>
    <string name="hospitals">Hospitals</string>
    <string name="shopping">Shopping</string>
    <string name="medicals">Medical Stores</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="transport">Transport</string>
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="all_categories">All CATEGORIES</string>
    <string name="add_missing_place">ADD MISSING PLACE</string>
    <string name="cab_booking">Cab Book</string>
    <string name="expand_all">EXPAND ALL</string>

    <!-- profile section -->
    <string name="login">LOGIN</string>
    <string name="profile">PROFILE</string>
    <string name="logout">LOGOUT</string>


    <!-- Retailer Panel Strings -->
    <string name="sign_up">Sign Up</string>
    <string name="retailer_heading">Support\nOur Business</string>
    <string name="retailer_tag_line">No matter where you’re going from, we take you there.</string>
    <string name="create_account">Create\nAccount</string>
    <string name="how_we_work">How we work ?</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="forget_password_detail">Provide your account\'s email for which you want to reset your password!</string>
    <string name="make_selection_detail">Select which contact detail should we use to reset your password ?</string>
    <string name="make_selection">Make Selection</string>
    <string name="via_sms">via sms:</string>
    <string name="via_mail">via mail:</string>
    <string name="new_credentials">New Credentials</string>
    <string name="new_credentials_detail">Your identify has been verified! Set your new password</string>

    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="new_password">New Password</string>
    <string name="password_updated">Password\nUpdated</string>
    <string name="password_updated_success_message">Your password has been updated!</string>

    <string name="indonesia_package">Lombok Island is a majestic island that has a plethora of places to explore. It is located east of Bali and west of Sumbawa, part of the Lesser Sunda Island chain. This place is blessed with scenic beaches and it’s a much needed escape that tourists need. Bali’s next door neighbour, it is home to Indonesia’s second largest volcanic peaks, Mount Rinjani. This island offers many extraordinary experiences to explore the magical underwater world of Indonesia.</string>

    <string name="temp_card">---</string>
    <string name="wind_card">---</string>
    <string name="locality_card">---</string>
    <string name="date_card">Last updated at: 10:56 AM</string>
    <string name="sunrise_sund_details">05:30 AM</string>
    <string name="sun_set_sun_details">06:20 PM</string>
    <string name="splash_title">Tujour Weather</string>
    <string name="today_forecast">Today Forecast</string>
    <string name="today_date">22-08-22</string>
    <string name="weather_type">Light Rain</string>
    <string name="twomorrow_forecast">Tomorrow Forecast</string>
    <string name="temp_c">26°C</string>
</resources>