<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/menu_dashboard_icon"/>
        <item
            android:id="@+id/nav_search"
            android:title="@string/search"
            android:icon="@drawable/menu_search_icon"/>
        <item
            android:id="@+id/nav_all_categories"
            android:title="@string/all_categories"
            android:icon="@drawable/menu_categories_icon"/>
        <item
            android:id="@+id/nav_add_missing_places"
            android:title="@string/add_missing_place"
            android:icon="@drawable/menu_add_missing_place_icon"/>

    </group>

    <item android:title="Profile">
        <menu>

            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:title="@string/login"
                    android:icon="@drawable/menu_login_icon"/>
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/menu_profile_icon"/>
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/menu_logout_icon"/>

            </group>

        </menu>
    </item>

    <item android:title="Categories">
        <menu>

            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_hospital"
                    android:title="@string/hospitals"
                    android:icon="@drawable/hospital_icon"/>
                <item
                    android:id="@+id/nav_restaurants"
                    android:title="@string/restaurants"
                    android:icon="@drawable/restaurant_icon"/>
                <item
                    android:id="@+id/nav_shopping"
                    android:title="@string/shopping"
                    android:icon="@drawable/shop_icon"/>
                <item
                    android:id="@+id/nav_transport"
                    android:title="@string/transport"
                    android:icon="@drawable/transport_icon"/>

            </group>

        </menu>
    </item>

    <item android:title="Share">
        <menu>

            <group
                android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_share"
                    android:title="@string/share"
                    android:icon="@drawable/menu_share_icon"/>
                <item
                    android:id="@+id/nav_rate_us"
                    android:title="@string/rate_us"
                    android:icon="@drawable/menu_rate_us_icon"/>
            </group>

        </menu>
    </item>

</menu>